# gyroscope-ui

./: .env  .gitignore  .readthedocs.yaml  AUTODOC_IMPLEMENTATION.md  BUGFIXES.md  CHANGES_SUMMARY.md  CONFIG_FILES.md  CONFIG_UPDATE.md  GIT_COMMIT_SUMMARY.md  GYRO_UI.pyproject  HRNGGUI.pyproject  INSTALL.md  MANIFEST.in  MERGE_IMPROVEMENTS.md  MOCK_DEVICE_FIXES.md  PACKAGING.md  QUICKSTART.md  README.md  READTHEDOCS_SETUP.md  READY_TO_DEPLOY.md  ROADMAP.md  WiFIPrototype.ipynb  alert_ui.py  book.toml  config.json  connection.ui  connection_ui.py  control.ui  form.ui  form_ui.py  main.py  mainwindow.py  manual_checklist.py  notes.md  performance_analysis.py  performance_optimization_guide.py  pyproject.toml  radioactive_samples.json  rc_WindowIcon.py  requirements.txt  (+13 more)
.github/workflows/: release.yml  sphinx-docs.yml  test-build.yml
Arduino-Gyroscope/: platformio.ini
Arduino-Gyroscope/backup_src/: main.cpp
Arduino-Gyroscope/src/: main.cpp  secrets.h
docs/: CHANGELOG.md  README.md  SUMMARY.md  api.rst  architecture.md  architecture.rst  code-structure.rst  code_structure.md  conf.py  configuration.md  configuration.rst  data-acquisition.md  data-analysis.md  data-analysis.rst  device-connection.md  export-save.md  faq.md  faq.rst  index.rst  installation.md  installation.rst  license.md  quickstart.md  quickstart.rst  requirements.txt  troubleshooting.md  troubleshooting.rst  user-interface.md  user-interface.rst
docs/api/: README.md  arduino-gmcounter.md  debug-utils.md  helper-classes.md  plot-widget.md
docs/dev_journal/: BATCH_PLOT_OPTIMIZATION.md  BATCH_PLOT_OPTIMIZATION.rst  BINARY_PROTOCOL.md  BINARY_PROTOCOL.rst  ENHANCED_BINARY_PROTOCOL.md  ENHANCED_BINARY_PROTOCOL.rst  FAST_DATA_IMPLEMENTATION.md  FAST_DATA_IMPLEMENTATION.rst  GIT_COMMIT_SUMMARY.md  GIT_COMMIT_SUMMARY.rst  READTHEDOCS_SETUP.rst  index.rst
docs/hardware/: arduino-integration.md  arduino-integration.rst  gm-counter-protocol.md  gm-counter-protocol.rst  radioactive-samples.md  radioactive-samples.rst
docs/theme/: custom.css  custom.js
pyqt/: alert.ui  alert_ui.py  connection.ui  connection_ui.py  control.ui  control_ui.py  form.ui  form_ui.py  main_template.ui  main_template_ui.py  mainwindow.ui  mainwindow_ui.py  toolbox_ui.py  ui_connection.py  ui_control.py  ui_form.py  ui_main_template.py  ui_mainwindow.py
scripts/: convert_docs.py  debug_data_controller.py  demo_batch_optimization.py  mock_arduino_server.py  setup_readthedocs.py  sync-config.sh  test_acquisition_headless.py  test_autodoc.py  validate_autodoc.py
src/: __init__.py  __main__.py  arduino.py  config.json  config.py  connection.py  control.py  data_controller.py  debug_utils.py  device_manager.py  gm_arduino.cpp  helper_classes.py  main.cpp  main.py  main_window.py  plot.py
src/pyqt/: connection_ui.py  mainwindow.ui  mainwindow_ui.py  ui_mainwindow.py
src_arduino/: gm_arduino.cpp  secrets.h  serial_com.cpp  serial_com.h  wifi_spi.ino
tests/: analyze_code.py  arduino_test.py  checklist_test.py  data_controller_test.py  integration_test.py  main_window_test.py  mock_daten_ext.csv  mock_daten_ext.json  mock_serial_device.py  plot.ipynb  plotwidget_test.py  run_tests.py  savemanager_extended_test.py  savemanager_test.py  test.py  test_and_run.py  test_binary_protocol.py  test_complete_plot_reset.py  test_data_separation_verification.py  test_fast_data_controller.py  test_index_reset.py  test_optimized_performance.py  testplan.md
